# Guitar_clone

./: Cargo.toml  Documentacion?.txt
src/: lib.rs  main.rs  states.rs
src/core/: audio.rs  chart.rs  mod.rs
src/editor/: io.rs  mod.rs  quantizer.rs  recorder.rs  visualizer.rs
src/gameplay/: mod.rs  movement.rs  scoring.rs  spawner.rs
src/ui/: hud.rs  layout.rs  menu.rs  mod.rs
